fix hover style link in dark mode

--- a/css/index.sass
+++ b/css/index.sass
@@ -174,6 +174,8 @@ body:not(.dark)
 body.dark
     background-color: $dark-color
     color: #fff
+    a:hover
+        color: #fff
     footer
         background-color: #52525b
         .footer-col-wrapper
